--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,8 @@
                 "--reload",
                 "--port=3001",
                 "--host=0.0.0.0",
+                "--ssl-keyfile=./certificates/localhost-key.pem",
+                "--ssl-certfile=./certificates/localhost.pem",
             ],
             "jinja": true
         }
