--- a/package.json
+++ b/package.json
@@ -5,19 +5,15 @@
   "scripts": {
     "start": "(npm run start:app&) && npm run start:api",
     "start:app": "next dev -p 3000 --hostname 0.0.0.0 --experimental-https",
-    "start:api": "uvicorn src.py.app:app --reload --port 3001 --host 0.0.0.0",
+    "start:api": "uvicorn src.py.app:app --reload --port 3001 --host 0.0.0.0 --ssl-keyfile ./certificates/localhost-key.pem --ssl-certfile ./certificates/localhost.pem",
     "lint": "next lint"
   },
   "dependencies": {
-    "@ffmpeg/ffmpeg": "^0.12.10",
-    "@ffmpeg/util": "^0.12.1",
-    "mime-types": "^2.1.35",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/mime-types": "^2.1.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
